--- a/styles/addTaskStyle.css
+++ b/styles/addTaskStyle.css
@@ -38,8 +38,17 @@
   gap: 8px;
 }
 
+.mg-t4 {
+  margin-top: 4px;
+}
 .mg-t8 {
   margin-top: 8px;
+}
+.mg-b16{
+  margin-bottom: 16px;
+}
+.mg-b2{
+  margin-bottom: 2px;
 }
 
 .overflow-y {
@@ -76,14 +85,13 @@ h1 {
 .error_message,
 .req {
   color: red;
-  font-size: 14px;
+  font-size: 0.875rem;
   height: 14px;
 }
 
 .task-input-container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .input_field {
@@ -93,7 +101,7 @@ h1 {
 }
 
 label {
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 400;
   line-height: 120%;
   letter-spacing: 0%;
@@ -106,7 +114,7 @@ label {
   border: 1px solid #ccc;
   border-radius: 10px;
   height: 48px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .separator {
@@ -125,7 +133,7 @@ label {
   background: #fff;
   border: 1px solid #ccc;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 120%;
   cursor: pointer;
   transition: background 0.2s;
@@ -153,7 +161,7 @@ label {
   padding: 12px;
   border-radius: 10px;
   gap: 4px;
-  font-size: 21px;
+  font-size: 1.313rem;
   line-height: 120%;
   cursor: pointer;
 }
@@ -190,7 +198,7 @@ label {
 
 .dropdown-arrow {
   transition: transform 0.2s;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .custom-category-dropdown.open .dropdown-arrow {
@@ -308,7 +316,7 @@ label {
   width: 32px;
   border-radius: 50%;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 120%;
   text-transform: uppercase;
   color: white;
@@ -322,7 +330,7 @@ label {
 
 .iconConact span {
   color: white;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .sepraratorSubtask {
@@ -357,13 +365,13 @@ textarea {
 
 .cleanInputforDate {
   border-style: none;
-  font-size: 18px;
+  font-size: 1.125rem;
   width: 100%;
 }
 
 .cleanInputforDate:focus {
   outline: none;
-  font-size: 18px;
+  font-size: 1.125rem;
   background-color: white;
 }
 
@@ -463,7 +471,7 @@ textarea {
   border-radius: 10px;
   padding: 0.5em 0.75em;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 0.875rem;
   box-shadow: 0 1px 2px #000000d7, 0 0px 0 #00000040;
 }
 
@@ -593,7 +601,7 @@ button.dateFaded {
 
 .feedbackAddTask span {
   color: white;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 400;
   line-height: 120%;
 }
@@ -626,7 +634,7 @@ button.dateFaded {
   }
 
   .priority-btn {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 
@@ -641,7 +649,7 @@ button.dateFaded {
 
   .btn {
     padding: 8px;
-    font-size: 18px;
+    font-size: 1.125rem;
   }
 }
 
@@ -746,7 +754,7 @@ button.dateFaded {
   }
 
   .feedbackAddTask span {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .feedbackIcon {
@@ -759,6 +767,6 @@ button.dateFaded {
   .priority-btn {
     padding: 4px 4px;
     width: 95px;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
